k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: app-prod
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  strategy:
    # Zero Downtime Strategy
    # Estratégia de Zero Downtime
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        # Placeholder image, replaced by CI/CD
        # Imagem temporária, substituída pela CI/CD
        image: nginx:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m" # 0.25 vCPU (Fargate Minimum / Mínimo Fargate)
            memory: "512Mi" # 0.5 GB
          limits:
            cpu: "250m"
            memory: "512Mi"
        # Probes ensure traffic only hits healthy pods
        # Sondas garantem que tráfego só vá para pods saudáveis
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
